[project]
name = "reconscan"
version = "0.1.0"
description = "URL investigation tool using a headless browser"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44.0",
    "click>=8.1.0",
    "dnspython>=2.6.0",
    "python-Wappalyzer>=0.3.1",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
reconscan = "reconscan.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["reconscan"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reconscan"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
